Fix unicode arrow rendering in design directions

--- a/_bmad-output/planning-artifacts/ux-design-directions.html
+++ b/_bmad-output/planning-artifacts/ux-design-directions.html
@@ -542,7 +542,7 @@
           <div class="card">
             <div class="row"><span>Confidence</span><strong>78%</strong></div>
             <div class="row"><span>Delta</span><span>-6% / 20m</span></div>
-            <div class="row"><span>Trend</span><span>\u2193 moderate</span></div>
+            <div class="row"><span>Trend</span><span>↓ moderate</span></div>
           </div>
           <div class="card">
             <div class="row"><span>Airline</span><span>Frontier (FR)</span></div>
@@ -570,7 +570,7 @@
           <span class="pill">Journey</span>
         </div>
         <div class="phone">
-          <div class="top"><span>Door \u2192 Gate</span><span>T-2h 58m</span></div>
+          <div class="top"><span>Door → Gate</span><span>T-2h 58m</span></div>
           <div class="kpi">
             <div class="score">82%</div>
             <div class="small">Recommended: leave in 14 min</div>
